updating experience, fab

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/1780c09f7a.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
@@ -103,11 +104,15 @@
                             <ul class="exp-list-head">
                                 <li class="exp-list-item">
                                     Developed custom, full-stack desktop applications to automate and streamline immunogenicity
-                                    assessment of drug candidates, which enabled > 99% reduction in analysis time.
+                                    assessment of drug candidates, enabling >99% reduction in analysis time.
                                 </li>
                                 <li class="exp-list-item">
-                                    Engineered custom user interfaces to enable high-throughput analysis of large tabular datasets, providing
+                                    Engineered custom user interfaces to enable high-throughput analysis of large proteomic datasets, providing
                                     a 500-fold increase in data utilization.
+                                </li>
+                                <li class="exp-list-item">
+                                    Constructed analysis pipelines leading to the discovery of constitutive immunogenic signatures that enable 
+                                    reliable quality control in immunopeptidomic workflows.  
                                 </li>
                             </ul>
                         </div>
@@ -119,11 +124,15 @@
                             <div class="subheading mb-3">Graduate Ambassador</div>
                             <ul class="exp-list-head">
                                 <li class="exp-list-item">
-                                    Responsible for establishing, maintaining, and utilizing network of academic and industrial researchers
-                                    and disseminating procedural knowledge for technology transfer
+                                    Identified novel scientific intellectual property from with a personal academic network of 300+ graduate 
+                                    students and 50+ principal investigators.
                                 </li>
                                 <li class="exp-list-item">
-                                    Leveraged university resources to find novel gene-edited cell line technology with patent and license potential.
+                                    Implemented new outreach events, canvas campaigns, and network opportunities aimed towards educating investigators 
+                                    over intellectual propoerty protection, management, and licensing.
+                                </li>
+                                <li class="exp-list-item">
+                                    Augmented the $3 Billion+ WARF portfolio through addition of novel gene edited cell line technologies. 
                                 </li>
                             </ul>
                         </div>
@@ -226,7 +235,7 @@
                     </p>
                     <p class="pub-text">
                         <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2021). “Higher Temperature Porous Graphitic Carbon Separations 
-                        Differentially Impact Distinct Glycopeptide Classes.” (In Preparation)
+                        Differentially Impact Distinct Glycopeptide Classes.” (In Submission)
                     </p>
                     <p class="pub-text">
                         <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. “Six-plex Isobaric Labeling Reveals Glycosylation Dysregulation Across 
@@ -444,6 +453,7 @@
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="fab fa-r-project"></i></li>
                         <li class="skills-image"><img src="./assets/img/Clang.svg" alt="C Language"></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-rust"></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
