--- a/portfolio.html
+++ b/portfolio.html
@@ -202,7 +202,7 @@
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2021). “Higher Temperature Porous Graphitic Carbon Separations 
-                            Differentially Impact Distinct Glycopeptide Classes.” (In Preparation)
+                            Differentially Impact Distinct Glycopeptide Classes.” (In Submission)
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. “Six-plex Isobaric Labeling Reveals Glycosylation Dysregulation Across 
