update resume, add funding

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#funding">Funding</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="portfolio.html">Portfolio</a></li>
@@ -401,6 +402,52 @@
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2015 - May 2016</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <section class="resume-section" id="funding">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Funding</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Creating a region- specific biomolecular atlas of the brain of Alzheimer’s disease</h3>
+                            <div class="subheading mb-3">1R01AG078794-01</div>
+                            <ul class="exp-list-head">
+                                <li class="exp-list-item">
+                                    Funding Awarded: $3,780,730
+                                </li>
+                                <li class="exp-list-item">
+                                    Project Length: 5 years
+                                </li>
+                                <li class="exp-list-item">
+                                    Role: Contributing Author
+                                </li>
+                                <li class="exp-list-item">
+                                    Award Date: September 2022
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Acquisition of a Dual-Source, High-Performance, Ion Mobility, Quadrupole Time-of-Flight Mass Spectrometry System for Biomedical Research at UW-Madison</h3>
+                            <div class="subheading mb-3">1S10OD028473-01A1</div>
+                            <ul class="exp-list-head">
+                                <li class="exp-list-item">
+                                    Funding Awarded: $1,275,704
+                                </li>
+                                <li class="exp-list-item">
+                                    Project Length: 1 year, direct
+                                </li>
+                                <li class="exp-list-item">
+                                    Role: <b>Primary Author</b>
+                                </li>
+                                <li class="exp-list-item">
+                                    Award Date: May 2021
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
