adding journal acceptance, resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -202,7 +202,7 @@
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2021). “Higher Temperature Porous Graphitic Carbon Separations 
-                            Differentially Impact Distinct Glycopeptide Classes.” (In Submission)
+                            Differentially Impact Distinct Glycopeptide Classes.” <i>Journal for the American Society for Mass Spectrometric</i>. Accepted.
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. “Six-plex Isobaric Labeling Reveals Glycosylation Dysregulation Across 
@@ -243,7 +243,7 @@
                         </p>
                         <p class="pub-text">
                             Y Shi, Z. Li, B. Wang, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, Z. Chen, F. Ma, L. Li (2022) "Enabling Global Analysis of Protein 
-                            Citrullination and Homocitrullination via Biotin Thiol Tag-Assisted Mass Spectrometry." <i>Chemical Science</i>. In submission.
+                            Citrullination and Homocitrullination via Biotin Thiol Tag-Assisted Mass Spectrometry." <i>Analytical Chemistry</i>. Accepted.
                         </p>
                         <p class="pub-text">
                             M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2022) 
