--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Hiph Pressure Liquid Chromatography
+                            High Pressure Liquid Chromatography
                             <li>
                                 <span class="fa-li-low"></span>
                                 Nano & Standard Flow | Reversed-phase | Porous graphitic carbon | Ion-Exchange | Size Exclusion
