--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,16 @@
                     <h2 class="mb-5">Publications</h2>
                     <div class="card-table">
                         <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/JASMS_PGC_2022.png" alt="JASMS Graphical Abstract">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Higher Temperature Porous Graphitic Carbon Separations Differentially Impact Distinct Glycopeptide Classes</h5>
+                                <p class="card-text">Investigations of the optimal chromatographic conditions that promote identification efficiency and optimal
+                                    liquid phase resolution.
+                                </p>
+                                <a href="https://doi.org/10.1021/jasms.2c00249" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Manuscript/TrAC_2022.png" alt="TrAC Graphical Abstract">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical Capacity in Omics 
@@ -181,6 +191,11 @@
                     </div>
                     <div class="row">
                         <p class="pub-text">
+                            <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2021). “Higher Temperature Porous Graphitic Carbon Separations 
+                            Differentially Impact Distinct Glycopeptide Classes.” <i>Journal for the American Society for Mass Spectrometric</i>. Published online
+                            November 30, 2022. <a href="https://doi.org/10.1021/jasms.2c00249">10.1021/jasms.2c00249</a>
+                        </p>
+                        <p class="pub-text">
                             <b>D.G. Delafield</b>, C. Kaminsky, G. Liu, L. Li. “High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical 
                             Capacity in Omics Applications and Structural Investigations.” <i>Trends in Analytical Chemistry.</i> Published online August 24, 2022.
                             <a href="https://doi.org/10.1016/j.trac.2022.116761">10.1016/j.trac.2022.116761</a>
@@ -199,10 +214,6 @@
                             <b>D.G. Delafield</b>, L. Li, (2020). "Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation." 
                             <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
                                 10.1074/mcp.R120.002095</a>
-                        </p>
-                        <p class="pub-text">
-                            <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2021). “Higher Temperature Porous Graphitic Carbon Separations 
-                            Differentially Impact Distinct Glycopeptide Classes.” <i>Journal for the American Society for Mass Spectrometric</i>. Accepted.
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. “Six-plex Isobaric Labeling Reveals Glycosylation Dysregulation Across 
