--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
                         </button>
                     </div>
                     <p class="pub-text">
+                        <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2021). “Higher Temperature Porous Graphitic Carbon Separations 
+                        Differentially Impact Distinct Glycopeptide Classes.” <i>Journal for the American Society for Mass Spectrometric</i>. Published online
+                        November 30, 2022. <a href="https://doi.org/10.1021/jasms.2c00249">10.1021/jasms.2c00249</a>
+                    </p>
+                    <p class="pub-text">
                         <b>D.G. Delafield</b>, C. Kaminsky, G. Liu, L. Li. “High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical 
                         Capacity in Omics Applications and Structural Investigations.” <i>Trends in Analytical Chemistry.</i> Published online August 24, 2022.
                         <a href="https://doi.org/10.1016/j.trac.2022.116761">10.1016/j.trac.2022.116761</a>
@@ -233,10 +238,6 @@
                         <b>D.G. Delafield</b>, L. Li, (2020). "Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation." 
                         <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
                             10.1074/mcp.R120.002095</a>
-                    </p>
-                    <p class="pub-text">
-                        <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2021). “Higher Temperature Porous Graphitic Carbon Separations 
-                        Differentially Impact Distinct Glycopeptide Classes.” <i>Journal for the American Society for Mass Spectrometry</i>. Accepted.
                     </p>
                     <p class="pub-text">
                         <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. “Six-plex Isobaric Labeling Reveals Glycosylation Dysregulation Across 
