update publications for citrullination AC

--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
                         </button>
                     </div>
                     <p class="pub-text">
-                        <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2021). “Higher Temperature Porous Graphitic Carbon Separations 
+                        <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2022). “Higher Temperature Porous Graphitic Carbon Separations 
                         Differentially Impact Distinct Glycopeptide Classes.” <i>Journal for the American Society for Mass Spectrometric</i>. Published online
                         November 30, 2022. <a href="https://doi.org/10.1021/jasms.2c00249">10.1021/jasms.2c00249</a>
                     </p>
                     <p class="pub-text">
-                        <b>D.G. Delafield</b>, C. Kaminsky, G. Liu, L. Li. “High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical 
+                        <b>D.G. Delafield</b>, C. Kaminsky, G. Liu, L. Li. (2022) “High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical 
                         Capacity in Omics Applications and Structural Investigations.” <i>Trends in Analytical Chemistry.</i> Published online August 24, 2022.
                         <a href="https://doi.org/10.1016/j.trac.2022.116761">10.1016/j.trac.2022.116761</a>
                     </p>
@@ -277,13 +277,14 @@
                         Nervous System of the Atlantic Blue Crab, Callinectes sapidus," <i>Analytical Chemistry</i>, to be submitted.
                     </p>
                     <p class="pub-text">
-                        Y Shi, Z. Li, B. Wang, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, Z. Chen, F. Ma, L. Li (2022) "Enabling Global Analysis of Protein 
-                        Citrullination and Homocitrullination via Biotin Thiol Tag-Assisted Mass Spectrometry." <i>Analytical Chemistry</i>. Accepted.
-                    </p>
-                    <p class="pub-text">
                         M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2022) 
                         “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
-                        Fragile X Syndrome Mouse Model”. Nature Communications. In Submission.
+                        Fragile X Syndrome Mouse Model”. In Submission. <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
+                    </p>
+                    <p class="pub-text">
+                        Y Shi, Z. Li, B. Wang, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, Z. Chen, F. Ma, L. Li (2022) "Enabling Global Analysis of Protein 
+                        Citrullination and Homocitrullination via Biotin Thiol Tag-Assisted Mass Spectrometry." <i>Analytical Chemistry</i>. Published online 
+                        Decmber 13, 2022. <a href="https://doi.org/10.1021/acs.analchem.2c03844">10.1021/acs.analchem.2c03844</a>.
                     </p>
                     <p class="pub-text">
                         N. Wang, N. Wang, S. Yu, H. Zhang, S. Tang, D. Wang, W. Lu, H. Li, <b>D.G. Delafield</b>, 
