--- a/portfolio.html
+++ b/portfolio.html
@@ -112,31 +112,13 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/Manuscript/NatMeth_LactylLysine.png" alt="Nat Methods Figure 1">
-                            <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Cyclic immonium ion of lactyllysine reveals widespread lactylation in the human proteome</h5>
-                                <p class="card-text">A novel diagnostic ion-based strategy, to confidently identify new lactylation events, unveiling a 
-                                                     wide lactylproteome landscape that had previously been confined to lactylated histones.</p>
-                                <a href="https://www.nature.com/articles/s41592-022-01523-1" target="_blank" class="mt-auto btn btn-primary">Read</a>
-                            </div>
-                        </div>
-                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Manuscript/ABC_PGC_2022.png" alt="ABC PGC TOC Figure">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Complementary proteome and glycoproteome access revealed through comparative 
-                                                       analysis of reversed phase and porous graphitic carbon chromatography</h5>
-                                <p class="card-text">First reports of porous graphitic carbon for untargeted glycoproteomics compared
-                                                     to traditional reversed phase liquid chromatography</p>
-                                <a href="https://doi.org/10.1007/s00216-022-03934-7" target="_blank" class="mt-auto btn btn-primary">Read</a>
-                            </div>
-                        </div>
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/Manuscript/MCP_Rev_2020.png" alt="MCP Review Image">
-                            <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation</h5>
-                                <p class="card-text">Review of experimental considerations and advancements for quantitative glycomics and
-                                                     glycopeptidomics over the years 2010-2020.</p>
-                                <a href="https://doi.org/10.1074/mcp.R120.002095" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                                    analysis of reversed phase and porous graphitic carbon chromatography</h5>
+                                    <p class="card-text">First reports of porous graphitic carbon for untargeted glycoproteomics compared
+                                        to traditional reversed phase liquid chromatography.</p>
+                                        <a href="https://doi.org/10.1007/s00216-022-03934-7" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -146,6 +128,33 @@
                                 <p class="card-text">Review of recent applications and associated advancements in quantitative proteomics
                                                      applications in cancer research.</p>
                                 <a href="https://doi.org/10.1039/D1CB00039J" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/MCP_Rev_2020.png" alt="MCP Review Image">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation</h5>
+                                <p class="card-text">Review of experimental considerations and advancements for quantitative glycomics and
+                                    glycopeptidomics over the years 2010-2020.</p>
+                                    <a href="https://doi.org/10.1074/mcp.R120.002095" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/ACS_Citrullination.jpeg" alt="Citrullination TOC Image">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Enabling Global Analysis of Protein Citrullination via Biotin Thiol Tag-Assisted Mass Spectrometry</h5>
+                                <p class="card-text">Validation of a novel biotin tag capable of selectively enriching citrullinated peptides from
+                                                     complex samples and the use of mass spectrometry for confident identification.</p>
+                                <a href="https://doi.org/10.1021/acs.analchem.2c03844" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/NatMeth_LactylLysine.png" alt="Nat Methods Figure 1">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Cyclic immonium ion of lactyllysine reveals widespread lactylation in the human proteome</h5>
+                                <p class="card-text">A novel diagnostic ion-based strategy, to confidently identify new lactylation events, unveiling a 
+                                                        wide lactylproteome landscape that had previously been confined to lactylated histones.</p>
+                                <a href="https://www.nature.com/articles/s41592-022-01523-1" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -191,12 +200,12 @@
                     </div>
                     <div class="row">
                         <p class="pub-text">
-                            <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2021). “Higher Temperature Porous Graphitic Carbon Separations 
+                            <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2022). “Higher Temperature Porous Graphitic Carbon Separations 
                             Differentially Impact Distinct Glycopeptide Classes.” <i>Journal for the American Society for Mass Spectrometric</i>. Published online
                             November 30, 2022. <a href="https://doi.org/10.1021/jasms.2c00249">10.1021/jasms.2c00249</a>
                         </p>
                         <p class="pub-text">
-                            <b>D.G. Delafield</b>, C. Kaminsky, G. Liu, L. Li. “High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical 
+                            <b>D.G. Delafield</b>, C. Kaminsky, G. Liu, L. Li. (2022) “High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical 
                             Capacity in Omics Applications and Structural Investigations.” <i>Trends in Analytical Chemistry.</i> Published online August 24, 2022.
                             <a href="https://doi.org/10.1016/j.trac.2022.116761">10.1016/j.trac.2022.116761</a>
                         </p>
@@ -253,18 +262,19 @@
                             Nervous System of the Atlantic Blue Crab, Callinectes sapidus," <i>Analytical Chemistry</i>, to be submitted.
                         </p>
                         <p class="pub-text">
-                            Y Shi, Z. Li, B. Wang, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, Z. Chen, F. Ma, L. Li (2022) "Enabling Global Analysis of Protein 
-                            Citrullination and Homocitrullination via Biotin Thiol Tag-Assisted Mass Spectrometry." <i>Analytical Chemistry</i>. Accepted.
-                        </p>
-                        <p class="pub-text">
                             M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2022) 
                             “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
-                            Fragile X Syndrome Mouse Model”. Nature Communications. In Submission.
+                            Fragile X Syndrome Mouse Model”. In Submission. <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
+                        </p>
+                        <p class="pub-text">
+                            Y Shi, Z. Li, B. Wang, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, Z. Chen, F. Ma, L. Li (2022) "Enabling Global Analysis of Protein 
+                            Citrullination and Homocitrullination via Biotin Thiol Tag-Assisted Mass Spectrometry." <i>Analytical Chemistry</i>. Published online 
+                            Decmber 13, 2022. <a href="https://doi.org/10.1021/acs.analchem.2c03844">10.1021/acs.analchem.2c03844</a>.
                         </p>
                         <p class="pub-text">
                             N. Wang, N. Wang, S. Yu, H. Zhang, S. Tang, D. Wang, W. Lu, H. Li, <b>D.G. Delafield</b>, 
                             Y. Kong, X. Wang, C. Shao, L. Lv, G. Wang, R. Tan, N. Wang, H. Hao, H. Ye (2022) “Cyclic Immonium Ion 
-                            of Lactyllysine Reveals Widespread Lactylation in the Human Proteome,” <i>Nature Methods</i>. Published online June 28, 2022.
+                            of Lactyllysine Reveals Widespread Lactylation in the Human Proteome” <i>Nature Methods</i>. Published online June 28, 2022.
                             <a href="https://www.nature.com/articles/s41592-022-01523-1">10.1038/s41592-022-01523-1</a>
                         </p>
                         <p class="pub-text">
@@ -288,7 +298,7 @@
                         <p class="pub-text">
                             Ma, H., <b>D.G. Delafield</b>, Z. Wang, J. You and S. Wu (2017). "Finding Biomass Degrading Enzymes 
                             Through an Activity-Correlated Quantitative Proteomics Platform (ACPP)." <i>Journal of American 
-                            for Mass Spectrometry</i>. 28, 655-663. <a href="https://pubs.acs.org/doi/10.1007/s13361-016-1569-8">
+                            for Mass Spectrometry</i>. 28, 655-663. <a href="https://pubs.acs.org/doi/abs/10.1021/jasms.8b05509">
                             10.1021/jasms.8b05509</a>
                         </p>
                     </div>
