--- a/portfolio.html
+++ b/portfolio.html
@@ -225,24 +225,21 @@
                                 10.1074/mcp.R120.002095</a>
                         </p>
                         <p class="pub-text">
+                            <b>D.G. Delafield</b>, H.N. Miles, T.N. Liu, W.A. Ricke, L. Li. “Inclusion of Porous Graphitic Carbon Chromatography Yields Greater 
+                            Protein Identification, Compartment and Process Coverage, and Enables More Reflective Protein-Level Label-Free Quantitation.” 
+                            (In Preparation)
+                        </p>
+                        <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. “Six-plex Isobaric Labeling Reveals Glycosylation Dysregulation Across 
                             Benign, Metastatic, and Tumorigenic Prostate Cancer.” (In Preparation)
                         </p>
                         <p class="pub-text">
-                            <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li.  “Non-tryptic Enzymatic Cleavage for Improved PGC-Based Glycoproteomic 
-                            Profiling.” (In preparation)
+                            <b>D.G. Delafield</b>, N. Treuttner, H.N. Miles, W.A. Ricke, L. Li.  “Capsule Network Retention Time Correction Facilitates 
+                            Prostatic Tumorigenesis Discovery Through Porous Graphitic Carbon DIA-MS.” (In preparation)
                         </p>
                         <p class="pub-text">
-                            <b>D.G. Delafield</b>, A. Phetsanthad, L. Li (2021). “Gas Phase Fractionation, Data-Independent Acquisition for Improved 
-                            Profiling Depth in Microfluidic Capillary Electrophoresis Mass Spectrometry.” (In Preparation)
-                        </p>
-                        <p class="pub-text">
-                            <b>D.G. Delafield</b>, D. Wang, H.N. Miles, L. Li (2021). “Biphasic Reversed-Phase, Porous Graphitic Carbon Capillary Columns 
-                            Facilitates Comprehensive Bottom-up Glycoproteomics.” (In Preparation)
-                        </p>
-                        <p class="pub-text">
-                            <b>D.G. Delafield†</b>, X. Zhong†, L. Li, (2022). "Data Independent Acquisition Mass Spectrometry Enables Profiling of 
-                            Metabolic Dysregulation In Response to Neurological Degeneration" (In preparaton) († Co-First Authors)
+                            <b>D.G. Delafield†</b>, X. Zhong†, L. Li, (2022). "Sample Agnostic Spectral Libraries Enable Quantitation of >9,300 Cerebrospinal 
+                            Fluid Proteins Across Neurodegenerative Disease Patient Cohorts." (In preparaton) († Co-First Authors)
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield†</b>, X. Zhong†, L. Li. "Enhanced Proteomic Coverage Enabled through BoxCar DIA and Sample Agnostic Spectral 
@@ -301,6 +298,7 @@
                             for Mass Spectrometry</i>. 28, 655-663. <a href="https://pubs.acs.org/doi/abs/10.1021/jasms.8b05509">
                             10.1021/jasms.8b05509</a>
                         </p>
+    
                     </div>
                 </div>
             </section>
