adding nat meth comment, formatting

--- a/portfolio.html
+++ b/portfolio.html
@@ -235,7 +235,7 @@
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, N. Treuttner, H.N. Miles, W.A. Ricke, L. Li.  “Capsule Network Retention Time Correction Facilitates 
-                            Prostatic Tumorigenesis Discovery Through Porous Graphitic Carbon DIA-MS.” (In preparation)
+                            Prostatic Tumorigenesis Discovery Through Porous Graphitic Carbon DIA-MS.” (In Preparation)
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield†</b>, X. Zhong†, L. Li, (2022). "Sample Agnostic Spectral Libraries Enable Quantitation of >9,300 Cerebrospinal 
@@ -243,25 +243,29 @@
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield†</b>, X. Zhong†, L. Li. "Enhanced Proteomic Coverage Enabled through BoxCar DIA and Sample Agnostic Spectral 
-                            Libraries." (In preparation) († Co-First Authors)
+                            Libraries." (In Preparation) († Co-First Authors)
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. "Sample Agnostic Spectral Libraries Reveal Underlying Molecular Pathways in 
-                            Aggressive Metastatic Prostate Cancer." (In preparation)
+                            Aggressive Metastatic Prostate Cancer." (In Preparation)
                         </p>
                         <p class="pub-text">
                             G. Li, C. Jeon, M. Ma, Z. Zheng, <b>D.G. Delafield</b>, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
                             "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42" <i>Angewante 
-                            Chemie</i>, Under revision.
+                            Chemie</i>. (In Submission)
                         </p>
                         <p class="pub-text">
                             Y. Liu, <b>D.G. Delafield</b>, L. Li "Comprehensive Mass Spectrometric Characterization of Neuropeptidome in 
-                            Nervous System of the Atlantic Blue Crab, Callinectes sapidus," <i>Analytical Chemistry</i>, to be submitted.
+                            Nervous System of the Atlantic Blue Crab, Callinectes sapidus," <i>Analytical Chemistry</i>. (To Be Submitted).
                         </p>
                         <p class="pub-text">
                             M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2022) 
                             “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
-                            Fragile X Syndrome Mouse Model”. In Submission. <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
+                            Fragile X Syndrome Mouse Model”. (Under Revision). <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
+                        </p>
+                        <p class="pub-text">
+                            H. Zhang, <b>D.G. Delafield</b>, L. Li (2023) "Mass spectrometry imaging: the rise of spatially resolved single-cell omics," <i>Nature Methods</i>. 
+                            (Accepted).
                         </p>
                         <p class="pub-text">
                             Y Shi, Z. Li, B. Wang, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, Z. Chen, F. Ma, L. Li (2022) "Enabling Global Analysis of Protein 
@@ -298,7 +302,6 @@
                             for Mass Spectrometry</i>. 28, 655-663. <a href="https://pubs.acs.org/doi/abs/10.1021/jasms.8b05509">
                             10.1021/jasms.8b05509</a>
                         </p>
-    
                     </div>
                 </div>
             </section>
